welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:5: error: ')' expected but ';' found.
while (2 * biscuits = caseOrange + 1;
                                    ^RunHalf:7: error: ';' expected but 'if' found.
if (estSurBiscuit) {biscuits=biscuits+1}) {
^